dark mode fix

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,6 +22,7 @@
     --link-color: #f5c;
     --link-color-active: #e0b;
     --accent-color: #0ff;
+    --table-zebra-bg: #374046;
   }
 }
 
